--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,8 +12,8 @@
     </div>
     <div class="hero-desc">
       <p class="hero-desc__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
+        Ice cream is a mixture of milk that has been frozen into a soft for your
+        pleasure.
       </p>
       <a class="hero-btn-arrow" href="#gallery">
         <svg class="icon-button" width="40px" height="15px">
