--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,20 +1,27 @@
 <section class="advantages section">
   <div class="container">
+    <h2 class="visually-hidden">Our advantages</h2>
     <ul class="advantages__list list">
       <li class="advantages__item">
         <div class="advantages__circle advantages__circle-cow"></div>
         <p class="advantages__point">721</p>
-        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
       <li class="advantages__item">
         <div class="advantages__circle advantages__circle-weight"></div>
         <p class="advantages__point">16kg</p>
-        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
       <li class="advantages__item">
         <div class="advantages__circle advantages__circle-ice"></div>
         <p class="advantages__point">84</p>
-        <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
     </ul>
   </div>
