--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,118 +4,222 @@
     <ul class="gallery__list list gallery-slider" id="gallery">
       <li class="gallery__item">
         <picture>
-          <source srcset="
+          <source
+            srcset="
               ./images/gallery/gallery.img1.desc_@1x.webp 1x,
               ./images/gallery/gallery.img1.desc_@2x.webp 2x
-            " type="image/webp" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img1.desc_@1x.jpg 1x,
               ./images/gallery/gallery.img1.desc_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img1.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img1.tablet_@2x.webp 2x
-            " type="image/webp" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img1.tablet_@1x.jpg 1x,
               ./images/gallery/gallery.img1.tablet_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img1.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img1.tablet_@2x.webp 2x
-            " type="image/webp" />
-          <source srcset="
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img1.mobile_@1x.jpg 1x,
               ./images/gallery/gallery.img1.mobile_@2x.jpg 2x
-            " type="image/jpeg" />
-          <img class="image" src="./images/gallery/gallery.img1.mobile_@1x.jpg" alt="ice-cream picture 1" />
+            "
+            type="image/jpeg"
+          />
+          <img
+            class="image"
+            src="./images/gallery/gallery.img1.mobile_@1x.jpg"
+            alt="ice-cream picture 1"
+          />
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
-          <source srcset="
+          <source
+            srcset="
               ./images/gallery/gallery.img2.desc_@1x.webp 1x,
               ./images/gallery/gallery.img2.desc_@2x.webp 2x
-            " type="image/webp" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img2.desc_@1x.jpg 1x,
               ./images/gallery/gallery.img2.desc_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img2.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img2.tablet_@2x.webp 2x
-            " type="image/webp" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img2.tablet_@1x.jpg 1x,
               ./images/gallery/gallery.img2.tablet_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img2.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img2.tablet_@2x.webp 2x
-            " type="image/webp" />
-          <source srcset="
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img2.mobile_@1x.jpg 1x,
               ./images/gallery/gallery.img2.mobile_@2x.jpg 2x
-            " type="image/jpeg" />
-          <img class="image" src="./images/gallery/gallery.img2.mobile_@1x.jpg" alt="ice-cream picture 1" />
+            "
+            type="image/jpeg"
+          />
+          <img
+            class="image"
+            src="./images/gallery/gallery.img2.mobile_@1x.jpg"
+            alt="ice-cream picture 1"
+          />
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
-          <source srcset="
+          <source
+            srcset="
               ./images/gallery/gallery.img3.desc_@1x.webp 1x,
               ./images/gallery/gallery.img3.desc_@2x.webp 2x
-            " type="image/webp" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img3.desc_@1x.jpg 1x,
               ./images/gallery/gallery.img3.desc_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img3.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img3.tablet_@2x.webp 2x
-            " type="image/webp" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img3.tablet_@1x.jpg 1x,
               ./images/gallery/gallery.img3.tablet_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img3.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img3.tablet_@2x.webp 2x
-            " type="image/webp" />
-          <source srcset="
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img3.mobile_@1x.jpg 1x,
               ./images/gallery/gallery.img3.mobile_@2x.jpg 2x
-            " type="image/jpeg" />
-          <img class="image" src="./images/gallery/gallery.img3.mobile_@1x.jpg" alt="ice-cream picture 1" />
+            "
+            type="image/jpeg"
+          />
+          <img
+            class="image"
+            src="./images/gallery/gallery.img3.mobile_@1x.jpg"
+            alt="ice-cream picture 1"
+          />
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
-          <source srcset="
+          <source
+            srcset="
               ./images/gallery/gallery.img4.desc_@1x.webp 1x,
               ./images/gallery/gallery.img4.desc_@2x.webp 2x
-            " type="image/webp" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img4.desc_@1x.jpg 1x,
               ./images/gallery/gallery.img4.desc_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 1200px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img4.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img4.tablet_@2x.webp 2x
-            " type="image/webp" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/webp"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img4.tablet_@1x.jpg 1x,
               ./images/gallery/gallery.img4.tablet_@2x.jpg 2x
-            " type="image/jpeg" media="(min-width: 768px)" />
-          <source srcset="
+            "
+            type="image/jpeg"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img4.tablet_@1x.webp 1x,
               ./images/gallery/gallery.img4.tablet_@2x.webp 2x
-            " type="image/webp" />
-          <source srcset="
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
               ./images/gallery/gallery.img4.mobile_@1x.jpg 1x,
               ./images/gallery/gallery.img4.mobile_@2x.jpg 2x
-            " type="image/jpeg" />
-          <img class="image" src="./images/gallery/gallery.img4.mobile_@1x.jpg" alt="ice-cream picture 1" />
+            "
+            type="image/jpeg"
+          />
+          <img
+            class="image"
+            src="./images/gallery/gallery.img4.mobile_@1x.jpg"
+            alt="ice-cream picture 1"
+          />
         </picture>
       </li>
     </ul>
@@ -127,15 +231,26 @@
       <ul class="reviews-list reviews-slider">
         <li class="reviews__item">
           <picture>
-            <source srcset="
+            <source
+              srcset="
                 ./images/customer/customer.img1_@1x.webp 1x,
                 ./images/customer/customer.img1_@2x.webp 2x
-              " type="image/webp" />
-            <source srcset="
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./images/customer/customer.img1_@1x.jpg 1x,
                 ./images/customer/customer.img1_@2x.jpg 2x
-              " type="image/jpeg" />
-            <img src="./images/customer/customer.img1_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image" />
+              "
+              type="image/jpeg"
+            />
+            <img
+              src="./images/customer/customer.img1_@1x.jpg"
+              alt="Emily from Fos Angeles"
+              width="85"
+              class="image"
+            />
           </picture>
           <p class="reviews__description">
             I love visiting your cafe. You prepare the most delicious ice cream
@@ -146,15 +261,26 @@
         </li>
         <li class="reviews__item">
           <picture>
-            <source srcset="
+            <source
+              srcset="
                 ./images/customer/customer.img2_@1x.webp 1x,
                 ./images/customer/customer.img2_@2x.webp 2x
-              " type="image/webp" />
-            <source srcset="
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./images/customer/customer.img2_@1x.jpg 1x,
                 ./images/customer/customer.img2_@2x.jpg 2x
-              " type="image/jpeg" />
-            <img src="./images/customer/customer.img2_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image" />
+              "
+              type="image/jpeg"
+            />
+            <img
+              src="./images/customer/customer.img2_@1x.jpg"
+              alt="Emily from Fos Angeles"
+              width="85"
+              class="image"
+            />
           </picture>
           <p class="reviews__description">
             I love eating popsicles on a hot day. Yours is always delicious. I
@@ -164,15 +290,26 @@
         </li>
         <li class="reviews__item">
           <picture>
-            <source srcset="
+            <source
+              srcset="
                 ./images/customer/customer.img3_@1x.webp 1x,
                 ./images/customer/customer.img3_@2x.webp 2x
-              " type="image/webp" />
-            <source srcset="
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./images/customer/customer.img3_@1x.jpg 1x,
                 ./images/customer/customer.img3_@2x.jpg 2x
-              " type="image/jpeg" />
-            <img src="./images/customer/customer.img3_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image" />
+              "
+              type="image/jpeg"
+            />
+            <img
+              src="./images/customer/customer.img3_@1x.jpg"
+              alt="Emily from Fos Angeles"
+              width="85"
+              class="image"
+            />
           </picture>
           <p class="reviews__description">
             Ice cream is my passion! I love your chocolate hazelnut ice cream!
@@ -183,15 +320,26 @@
         </li>
         <li class="reviews__item">
           <picture>
-            <source srcset="
+            <source
+              srcset="
                 ./images/customer/customer.img4_@1x.webp 1x,
                 ./images/customer/customer.img4_@2x.webp 2x
-              " type="image/webp" />
-            <source srcset="
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./images/customer/customer.img4_@1x.jpg 1x,
                 ./images/customer/customer.img4_@2x.jpg 2x
-              " type="image/jpeg" />
-            <img src="./images/customer/customer.img4_@1x.jpg" alt="Emily from Fos Angeles" width="85" class="image" />
+              "
+              type="image/jpeg"
+            />
+            <img
+              src="./images/customer/customer.img4_@1x.jpg"
+              alt="Emily from Fos Angeles"
+              width="85"
+              class="image"
+            />
           </picture>
           <p class="reviews__description">
             Every day we come to you with friends after classes in college. We
