--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -39,7 +39,7 @@
   @media screen and (min-width: 769px) {
     display: flex;
     justify-content: center;
-    max-width: 1600px;
+    max-width: 100%;
     background-image: url('../images/bg/bg.sec.2_@1x.png');
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
